@@ -1,5 +1,6 @@
 # 0.034
 # create subsession API WIP
+# create session API WIP
 
 # 0.033
 # stable version
